# Veritas

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: security-srp.yml
conan/config/: README.md
conan/config/profiles/: README.md
conan/recipes/: README.md
conan/recipes/cyrus-sasl/2.1.28/: conandata.yml  conanfile.py
docs/: README.md  build.md  codebase-state.md
docs/architecture/: notary-pki-policy.md  notary-threat-model.md  overview.md
docs/components/: gatekeeper.md  libveritas.md  notary.md  shared.md
docs/operations/: notary-release-checklist.md  notary-runbook.md
docs/protocol/: README.md
docs/security/: changes.md  tracking.md
docs/status/: current-state.md
libveritas/: CMakeLists.txt  README.md  conanfile.py
libveritas/include/veritas/: identity_manager.h
libveritas/include/veritas/auth/: entropy.h
libveritas/include/veritas/storage/: token_store.h
libveritas/src/: identity_manager.cpp
libveritas/src/auth/: auth_flow.cpp  auth_flow.h  entropy.cpp  gatekeeper_client.cpp  gatekeeper_client.h  sasl_client.cpp  sasl_client.h  secure_buffer.h
libveritas/src/notary/: notary_client.cpp  notary_client.h
libveritas/src/storage/: token_store.cpp
protocol/: CMakeLists.txt  README.md  gatekeeper.proto  identity.proto  notary.proto
scripts/: bootstrap.sh  build.sh  clean_user_presets.sh  lock.sh  package.sh  provision_sasl_user.sh  run_redis_tls_lane.sh  smoke_auth_demo.sh  smoke_identity_lifecycle.sh  smoke_notary_lifecycle.sh  test.sh  test_redis_tls_integration.sh  test_srp_strict.sh  verify_package.sh
services/: CMakeLists.txt
services/gatekeeper/: CMakeLists.txt
services/gatekeeper/src/: auth_metrics.cpp  auth_metrics.h  config.cpp  config.h  fake_salt.cpp  fake_salt.h  gatekeeper_service.cpp  gatekeeper_service.h  log_utils.cpp  log_utils.h  main.cpp  rate_limiter.cpp  rate_limiter.h  sasl_server.cpp  sasl_server.h  secure_erase.cpp  secure_erase.h  session_cache.cpp  session_cache.h  tls_utils.cpp  tls_utils.h  token_store.cpp  token_store.h  token_utils.cpp  token_utils.h
services/notary/: CMakeLists.txt
services/notary/src/: authorizer.cpp  authorizer.h  config.cpp  config.h  log_utils.cpp  log_utils.h  main.cpp  notary_service.cpp  notary_service.h  security_controls.cpp  security_controls.h  server.cpp  server.h  signer.cpp  signer.h  tls_utils.cpp  tls_utils.h  token_hash.cpp  token_hash.h
services/shared/: CMakeLists.txt
services/shared/include/veritas/shared/: issuance_store.h  shared.h  token_store.h
services/shared/src/: issuance_store.cpp  shared.cpp  token_store.cpp
tests/: CMakeLists.txt  main.cpp  tsan-grpc.supp
tests/gatekeeper/: auth_metrics_test.cpp  config_test.cpp  fake_salt_test.cpp  log_utils_test.cpp  rate_limiter_test.cpp  redis_tls_integration_test.cpp  sasl_integration_test.cpp  sasl_server_test.cpp  session_cache_test.cpp  tls_utils_test.cpp  token_store_test.cpp  token_utils_test.cpp
tests/libveritas/: auth_flow_integration_test.cpp  entropy_test.cpp  gatekeeper_client_test.cpp  identity_manager_persistence_test.cpp  rotation_manager_test.cpp  sasl_client_test.cpp  secure_string_test.cpp  token_store_test.cpp
tests/notary/: authorizer_test.cpp  config_test.cpp  notary_service_test.cpp  security_controls_test.cpp  server_integration_test.cpp  signer_test.cpp
tests/protocol/: identity_proto_contract_test.cpp  notary_proto_contract_test.cpp
tests/shared/: issuance_store_test.cpp  token_store_test.cpp
tools/: CMakeLists.txt
tools/auth_demo/: main.cpp
